qlcplus (4.14.0) stable; urgency=low

  * engine: fix flashing fade out
  * engine: add stopOnExit, waitFunctionStart and waitFunctionStop commands to Script - see documentation (thanks to ldebs)
  * engine: introduce RGBScript v3 and allow up to 5 colors (thanks to Hans-Jürgen Tappe)
  * UI: adjust audio volume on video intensity change
  * UI/Fixture Manager: limit the number of RGB panel columns for RGBW to avoid crash
  * UI/Function Wizard: improved with more VC widget creation (thanks to 8-Lambda-8)
  * UI/Show Manager: show step notes on the timeline (thanks to anarchid)
  * UI/Show Manager: handle CTRL+mouse wheel to zoom in/out
  * Virtual Console/Slider: send feedback on override button press
  * Virtual Console/Sped Dial: fix foreground color setting on Windows
  * Virtual Console/Frame: fix widget page initialization on Operate mode
  * Virtual Console/XY Pad: added Pan/Tilt fine external controls
  * Plugins/OS2L: fix receiving multiple messages at once
  * Web Access: reworked websocket implementation
  * Web Access: fix grand master stopping running functions
  * Web Access: fix simple desk not resetting the current universe
  * Web Access: add widget ID to getWidgetType and getWidgetStatus response
  * RGB scripts: added 'Sine Wave' script
  * RGB scripts: fix Vertical Fall not allowing changing color when cloned
  * New fixtures: GLP Impression X5, Ayrton Rivale Profile, Ayrton Kyalami (thanks to Masatoshi Fujino)
  * New fixture: Eurolite LED Mini Strobe Cluster SMD 48 (thanks to Oliver)
  * New fixture: Ayra Compar Kit 3 (thanks to Robert)
  * New fixtures: Acme Pixel Line IP, Ayrton Domino LT (thanks to Yestalgia)
  * New fixture: GLP JDC1 (thanks to Flo Edelmann)
  * New fixture: Shehds 2 Eyes 200W LED COB Cool Warm White (thanks to Devsider)
  * New fixture: Ayra ERO Micro Beam FX (thanks to Gianni)
  * New fixture: Shehds LED Wall Wash 18x18W RGBWA+UV (thanks to Fede79)
  * New fixture: Shehds LED Beam 12x12W RGBW (thanks to Lukas Hanisch)